amm/ckb-indexer/amm-ckb-testnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amm-ckb-testnet-svc
  namespace: ckb-amm
  labels:
    app: amm-ckb-testnet-svc
spec:
  ports:
  - name: indexer
    port: 8114
    targetPort: 9115
    protocol: TCP
  - name: rpc
    port: 8224
    targetPort: 8114
    protocol: TCP
  type: ClusterIP
  selector:
    app: amm-ckb-testnet
