amm/ckb-indexer/amm-ckb-testnet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ckb-amm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-amm-ckb-testnet
spec:
  rules:
  - host: rpcgliaswap.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: amm-ckb-testnet-svc
          servicePort: 8114
